template.yml
Resources:
# Create a VPC
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: Terraform Vpc

# Create a Public subnet in AZ1
  mySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "us-west-2a"
      Tags:
      - Key: "Name"
        Value: "Public subnet 1"

# Create a Private subnet in AZ1
  mySubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "us-west-2a"
      Tags:
      - Key: "Name"
        Value: "Private subnet 1"
  
# Create a Public subnet in AZ2
  mySubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "us-west-2b"
      Tags:
      - Key: "Name"
        Value: "Public subnet 2"

# Create a Private subnet in AZ2
  mySubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: "us-west-2b"
      Tags:
      - Key: "Name"
        Value: "Private subnet 2"

# Create an IGW
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: "Name"
        Value: "CF internet gateway"

# Attach IGW to a VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
         Ref: myVPC
      InternetGatewayId:
         Ref: myInternetGateway

# Create public route table
  publicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId:  
          Ref: myVPC
        Tags:
        - Key: "Name"
          Value: "Public RT"

# Create a route to an IGW 
  publicRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId:
         Ref: publicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: myInternetGateway

# Associate Route Table with Public Subnet 1
  mySubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId:
          Ref: mySubnet
        RouteTableId:
          Ref: publicRouteTable

# Create security group
  fridayInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host
      VpcId: 
          Ref: myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

# Create EC2 instance
  cloudformationEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-08e2d37b6a0129927"
      InstanceType: "t2.micro"
      KeyName: "vockey"
      NetworkInterfaces: 
      - AssociatePublicIpAddress: "true"
        DeviceIndex: "0"
        GroupSet: 
          - Ref: "fridayInstanceSecurityGroup"
        SubnetId: 
          Ref: "mySubnet"
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl enable httpd
          systemctl start httpd
          echo '<html><h1>Hello From Your Web Server!</h1></html>' > /var/www/html/index.html
      Tags:
      - Key: "Name"
        Value: "CloudFormation instance"
